<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/now_playing"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/album_art"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:background="@color/colorPrimaryDark"
                android:paddingLeft="8dp"
                android:paddingStart="8dp"
                android:src="@drawable/atom_heart_mother" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="6"
                android:background="@color/colorPrimaryDark"
                android:orientation="vertical"
                android:paddingBottom="32dp"
                android:paddingLeft="16dp"
                android:paddingStart="16dp"
                android:paddingTop="32dp">

                <TextView
                    android:id="@+id/song_name"
                    style="@style/NowPlayingStyle"
                    android:textSize="20sp"
                    tools:text="Atom Heart Mother" />

                <TextView
                    android:id="@+id/artist_name"
                    style="@style/NowPlayingStyle"
                    android:textSize="16sp"
                    tools:text="Pink Floyd" />

            </LinearLayout>

            <ImageView
                android:id="@+id/playButton"
                style="@style/PlayPauseButtonStyle"
                android:onClick="playButton"
                android:src="@mipmap/ic_play_circle_outline" />

            <ImageView
                android:id="@+id/pauseButton"
                style="@style/PlayPauseButtonStyle"
                android:onClick="pauseButton"
                android:src="@mipmap/ic_pause_circle_outline" />

        </LinearLayout>

        <TextView
            android:id="@+id/albums"
            style="@style/CategoryStyle"
            android:background="@color/category_albums_tracks"
            android:drawableLeft="@drawable/ic_album"
            android:drawableStart="@drawable/ic_album"
            android:text="@string/category_albums" />

        <TextView
            android:id="@+id/artists"
            style="@style/CategoryStyle"
            android:background="@color/category_artists"
            android:drawableLeft="@drawable/ic_artist"
            android:drawableStart="@drawable/ic_artist"
            android:text="@string/category_artists" />

        <TextView
            android:id="@+id/tracks"
            style="@style/CategoryStyle"
            android:background="@color/category_albums_tracks"
            android:drawableLeft="@drawable/ic_tracks"
            android:drawableStart="@drawable/ic_tracks"
            android:text="@string/category_tracks" />

        <TextView
            style="@style/CategoryStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:background="@color/category_albums_tracks"
            android:text="@string/main_activity_blurb"
            android:textSize="12sp" />

    </LinearLayout>
</ScrollView>