<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:orientation="vertical">

        <TextView
            style="@style/CategoryStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:background="@color/category_albums_tracks"
            android:text="@string/now_playing_activity_blurb"
            android:textSize="12sp">

        </TextView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:orientation="horizontal"
            android:paddingBottom="16dp"
            android:paddingTop="16dp">

            <Button
                android:id="@+id/album_button"
                style="@style/ButtonStyle"
                android:text="@string/category_albums" />

            <Button
                android:id="@+id/artist_button"
                style="@style/ButtonStyle"
                android:text="@string/category_artists" />

            <Button
                android:id="@+id/track_button"
                style="@style/ButtonStyle"
                android:text="@string/category_tracks" />

        </LinearLayout>

        <ImageView
            android:id="@+id/album_art"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="48dp"
            android:layout_marginRight="48dp"
            android:layout_marginTop="8dp"
            android:layout_weight="99"
            tools:src="@drawable/atom_heart_mother" />

        <TextView
            android:id="@+id/album_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:paddingBottom="16dp"
            android:paddingTop="8dp"
            android:textColor="@color/text"
            android:textSize="16sp"
            tools:text="Atom Heart Mother" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingLeft="48dp"
            android:paddingRight="48dp">

            <ImageView
                android:id="@+id/backButton"
                style="@style/ControlButtonStyle"
                android:src="@drawable/ic_skipback" />

            <ImageView
                android:id="@+id/playButton"
                style="@style/ControlButtonStyle"
                android:onClick="playButton"
                android:src="@drawable/ic_play" />

            <ImageView
                android:id="@+id/pauseButton"
                style="@style/ControlButtonStyle"
                android:onClick="pauseButton"
                android:src="@drawable/ic_pause" />

            <ImageView
                android:id="@+id/forwardButton"
                style="@style/ControlButtonStyle"
                android:src="@drawable/ic_skipforward" />

        </LinearLayout>

        <TextView
            android:id="@+id/song_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingTop="8dp"
            android:textColor="@color/text"
            android:textSize="20sp"
            tools:text="Alan's Psychedelic Breakfast" />

        <TextView
            android:id="@+id/artist_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingBottom="16dp"
            android:textColor="@color/text"
            android:textSize="12sp"
            tools:text="Pink Floyd" />

    </LinearLayout>
</ScrollView>
