<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    android:orientation="vertical">

    <TextView
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        style="@style/CategoryStyle"
        android:layout_margin="8dp"
        android:background="@color/category_albums_tracks"
        android:textSize="12sp"
        android:text="@string/artist_activity_blurb">

    </TextView>

    <LinearLayout
        android:id="@+id/now_playing"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/album_art"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:background="@color/colorPrimaryDark"
            android:paddingLeft="8dp"
            android:paddingStart="8dp"
            tools:src="@drawable/atom_heart_mother" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="6"
            android:background="@color/colorPrimaryDark"
            android:orientation="vertical"
            android:paddingBottom="32dp"
            android:paddingLeft="16dp"
            android:paddingStart="16dp"
            android:paddingTop="32dp">

            <TextView
                android:id="@+id/song_name"
                style="@style/NowPlayingStyle"
                tools:text="Atom Heart Mother"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/artist_name"
                style="@style/NowPlayingStyle"
                tools:text="Pink Floyd"
                android:textSize="16sp" />

        </LinearLayout>

        <ImageView
            android:id="@+id/playButton"
            style="@style/PlayPauseButtonStyle"
            android:onClick="playButton"
            android:src="@drawable/ic_play_circle_outline" />

        <ImageView
            android:id="@+id/pauseButton"
            style="@style/PlayPauseButtonStyle"
            android:onClick="pauseButton"
            android:src="@drawable/ic_pause_circle_outline" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:orientation="horizontal"
        android:padding="8dp">

        <Button
            android:id="@+id/album_button"
            style="@style/ButtonStyle"
            android:text="@string/category_albums" />

        <Button
            android:id="@+id/track_button"
            style="@style/ButtonStyle"
            android:text="@string/category_tracks" />

    </LinearLayout>

    <ListView
        android:id="@+id/artist_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:divider="@null"
        android:dividerHeight="0dp"
        android:orientation="vertical">

    </ListView>
</LinearLayout>
